@startuml
!include ../../../style.puml
show method
show fields
skinparam defaultFontColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR
skinparam genericDisplay old

class PersonalDetailRetriever {
+ {Static} List<Prefix> SUPPORTED_PREFIX
- NameContainsKeywordsPredicate

+ PersonalDetailRetriever(Prefix, NameContainsKeywordsPredicate)
+ apply()
}
class GetCommand {
+ GetCommand(VersionedModel, List<PersonalDetailRetriever>)
+ execute(VersionedModel)
- executeFilter(VersionedModel, PersonalDetailRetriever)
}

class Function<Student, Optional<PersonalDetail>> <<Interface>>{
}

PersonalDetailRetriever ..|> Function
GetCommand --> "*" PersonalDetailRetriever
@enduml
